Fix problem where headings were cut off by fixed nav after in-page jumps.

--- a/views/2014/styles/_speakers.scss
+++ b/views/2014/styles/_speakers.scss
@@ -1,4 +1,4 @@
-#speakers {
+.speakers-section {
   background: $xlight_blue_bkg;
   padding-bottom: 2rem;
 
@@ -49,7 +49,7 @@
 
 
 @media only screen and (max-width: 500px) {
-  section#speakers {
+  .speakers-section {
     .speaker {
       width: 95%;
       display: block;
